--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -1,19 +1,19 @@
 {% extends "base.html" %}
 {% block content %}
-<h3>Create a Blog Post!</h3>
+<h1>Create a Blog Post!</h1>
+    <div class="newpost">
     <form method="POST">
         
         <label>
             <p>Create a Title</p>
-            <input type="text" name="title" id="title" value="{{title_log}}">
+            <input type="text" name="title" placeholder="Add a Title..." id="title" value="{{title_log}}">
             <p class="error">{{title_error}}</p>
         </label>
-    </br>
-    </br>
+   
         
         <label>
             <p>Create a Post</p>
-            <textarea rows= "5" cols= "50" name="entry" id="entry" value="{{entry_log}}"></textarea>
+            <textarea rows= "5" cols= "50" placeholder="Write something.." name="entry" id="entry" value="{{entry_log}}"></textarea>
         </label>
         <input type="submit" value="Add Post" />
         <p class="error">{{entry_error}}</p>
@@ -22,5 +22,5 @@
         
     
     </form>
-     
+     </div>
 {% endblock %}
