--- a/templates/displaypost.html
+++ b/templates/displaypost.html
@@ -5,10 +5,11 @@
     {{posted_blog.title}}  
     
     <p id="posttext">{{posted_blog.body}}</p>
+    <p class="user">Posted by: <a class="sourcelink" href="/blog?userid={{posted_blog.owner_id}}">{{posted_blog.owner.username}}</a></p>
     </div>
   
         
-       
+    
 
    
        
