--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -5,14 +5,14 @@
     <form method="POST">
         
         <label>
-            <p>Create a Title</p>
+            <p class="newlabels">Create a Title</p>
             <input type="text" name="title" placeholder="Add a Title..." id="title" value="{{title_log}}">
             <p class="error">{{title_error}}</p>
         </label>
    
         
         <label>
-            <p>Create a Post</p>
+            <p class="newlabels">Create a Post</p>
             <textarea rows= "5" cols= "50" placeholder="Write something.." name="entry" id="entry" value="{{entry_log}}"></textarea>
         </label>
         <input type="submit" value="Add Post" />
