--- a/templates/base.html
+++ b/templates/base.html
@@ -5,11 +5,27 @@
     </head>
 <body>
 <div class="navbar">
-<a id="link" href="/blog">Homepage</a>
-<a id="link" href="/newpost">Create A Post</a> 
+<a id="link" href="/login">Login</a> 
+<a id="link" href="/">Home</a>
+<a id="link" href="/blog">Blogs</a>
+<a id="link" href="/newpost">New Post</a>
+<a id="link" href="/logout">Logout</a>
+
+
 </div>
+
+    {% with messages = get_flashed_messages(with_categories=True) %}
+        <ul>
+            {% for category,message in messages %}
+                <li class="{{category}}">{{message}}</li>
+            {% endfor %}
+        </ul>
+    {% endwith %}
+
     {% block content %}
     {% endblock %}
+
+    
 
 </body>
 </html>
